finished the show answer / hide answer button text change

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               What is the smallest country in the world by land area?
               <span aria-label="Quiz Question"></span>
             </h2>
-            <p data-js="answerText">Vatican City</p>
+            <p class="hidden" data-js="answerText">Vatican City</p>
             <button class="show-answer-button" data-js="show-answer-button">
               Show Answer
               <span aria-label="Show Answer"></span></button>
