--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>Quiz App</title>
-    <link rel="stylesheet" href="./styles.css" />
-    <script src="./index.js" defer></script>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <script src="./js/index.js" defer></script>
   </head>
   <body>
     <header class="header">
@@ -185,6 +185,10 @@
         <li>
           <a href="profile.html" class="navigation-item profile"></a>
           <span aria-label="Profile"></span>
+        </li>
+        <li>
+          <a href="new_card.html" class="navigation-item new-card"></a>
+          <span aria-label="New Card"></span>
         </li>
       </ul>
     </nav>      
