new card started

--- a/bookmarked_cards.html
+++ b/bookmarked_cards.html
@@ -180,6 +180,10 @@
           <span aria-label="bookmarked cards"></span>
         </li>
         <li>
+          <a href="new_card.html" class="navigation-item new-card"></a>
+          <span aria-label="New Card"></span>
+        </li>
+        <li>
           <a href="profile.html" class="navigation-item profile"></a>
           <span aria-label="Profile"></span>
         </li>
