--- a/new_card.html
+++ b/new_card.html
@@ -1,79 +1,75 @@
-<form data-js="form">
-        <fieldset>
-          <legend>Personal Information</legend>
-          <label for="first-name">First Name</label>
-          <input
-            type="text"
-            name="firstName"
-            id="first-name"
-            placeholder="Your first name"
-          />
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>Quiz App</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <script src="./js/newCard.js" defer></script>
+  </head>
+  <body>
+    <header class="header">
+      <h1 class="header__title">Quiz App</h1>
+      <span aria-label="Title"> </span>
+    </header>
+    <main class="main-content"> 
+      <form data-js="form" class="form">
+        <label for="your-question">Your Question</label>
+        <textarea
+          id="your-question"
+          name="yourQuestion" 
+          rows="4" cols="50"
+          class="input input-your-question"
+          placeholder="Type your question here..." 
+          required></textarea>
 
-          <label for="last-name">Last Name</label>
-          <input
-            type="text"
-            name="lastName"
-            id="last-name"
-            placeholder="Your last name"
-          />
-
-          <label for="age">Age</label>
-          <input type="number" name="age" id="age" min="16" max="200" />
-
-          <label for="email">Email</label>
-          <input type="email" name="email" id="email" />
-        </fieldset>
-
-        <fieldset>
-          <legend>Your complaint</legend>
-          <label for="complaint">What went wrong?</label>
-          <select name="complaint" id="complaint">
-            <option value="nothing" selected>
-              Nothing, everything is fine!
-            </option>
-            <option value="personal">It's me, not you!</option>
-            <option value="broken">
-              My product is broken, can you fix it?
-            </option>
-          </select>
-
-          <label for="details">Details about your complaint</label>
-          <textarea
-            name="details"
-            id="details"
-            rows="10"
-            cols="50"
-            placeholder="Please provide as much detail as possible"
-          ></textarea>
-
-          <label for="badness"
-            >How bad was your experience? (On a scale from <q>meh</q> to
-            <q>abysmal</q>)
-          </label>
-          <input
-            id="badness"
-            name="badness"
-            type="range"
-            min="1"
-            max="100"
-            value="100"
-          />
-
-          <label for="order-date">Order Date</label>
-          <input type="date" name="orderDate" id="order-date" />
-
-          <label for="tos">
-            <input type="checkbox" name="tos" id="tos" />
-            I have read the terms of service and agree to sell my soul
-            <a
-              href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-              target="_blank"
-              rel="noreferrer noopener"
-            >
-              (click here for more info)
-            </a>
-          </label>
-        </fieldset>
-
-        <button type="submit">Complain now!</button>
+        <label for="your-answer">Your Answer</label>
+        <textarea 
+          id="your-answer"
+          name="yourAnswer"
+          rows="4" cols="50"
+          class="input input-your-answer"
+          placeholder="Type your answer here..." 
+          required></textarea>
+        <label for="tag">Tag</label>
+        <input
+          type="text"
+          name="tag"
+          id="tag"
+          class="input input-tag"
+          placeholder="Tag"
+        />
+        <button type="submit" class="submit-button">Create</button>
       </form>
+    </main>
+    <nav >
+      <ul class="navigation">
+        <li>
+          <a href="index.html" class="navigation-item home"></a>
+          <span aria-label="home button"></span>
+        </li>
+        <li>
+          <a href="bookmarked_cards.html" class="navigation-item bookmark-nav"></a>
+          <span aria-label="bookmarked cards"></span>
+        </li>        
+        <li>
+          <a href="new_card.html" class="navigation-item new-card"></a>
+          <span aria-label="New Card"></span>
+        </li>
+        <li>
+          <a href="profile.html" class="navigation-item profile"></a>
+          <span aria-label="Profile"></span>
+        </li>
+      </ul>
+    </nav>      
+  </body>
+</html>
+
+
+
+
+
+
