--- a/new_card.html
+++ b/new_card.html
@@ -44,6 +44,9 @@
         />
         <button type="submit" class="submit-button">Create</button>
       </form>
+      <ul data-js="card-container">
+
+      </ul>
     </main>
     <nav >
       <ul class="navigation">
